website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-app-service
spec:
  selector:
    app: rick-morty-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
