website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-morty-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 34.172.161.102.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rick-morty-app-service
            port:
              number: 80
